--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
-CVS
----
+Version 0.8 <2005.05.27>
+------------------------
 
   * implemented text element
   * added agg backend (enabled by windows version)
