--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ CVS
 ---
 
   * added cairo backend
+  * added some copy constructors
+    (don't copies pointer to canvas item)
+  * added rect parameter to wxSVGDocument::Render
+  * svgctrl: fixed refresh (redraw buffer only in OnPaint)
 
 Version 0.9 <2005.07.31>
 ------------------------
