--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@ TODO
   * rewrite parse_dtd.py using xmlto library to parse svg11.dtd
   * implement animated style attributes
   * fix SVGAnimatedPathData and SVGAnimatedPoints
+  * libart backend: optimize DrawCanvasImage -> too slow
+  * Render: don't delete shadow tree aftre drawing of wxUseElement
