--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ CVS
   * added some copy constructors
     (don't copies pointer to canvas item)
   * added rect parameter to wxSVGDocument::Render
+  * added copy constructor to wxSVGPathSegList
   * svgctrl: fixed refresh (redraw buffer only in OnPaint)
 
 Version 0.9 <2005.07.31>
