--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 Version 1.0b2 <2005.11.08>
 --------------------------
 
-  * implemented Save
+  * implemented saving
   * some other small changes
 
 Version 1.0b1 <2005.10.18>
