--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.0b3 <2005.12.01>
+--------------------------
+
+  * fixed some bugs
+
 Version 1.0b2 <2005.11.08>
 --------------------------
 
