--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.0b4 <2005.12.04>
+
+  * fixed text rendering under some platforms
+
 Version 1.0b3 <2005.12.01>
 --------------------------
 
