--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Version 1.0b5 <2006.01.23>
+--------------------------
+
+  * added support of svg gradients
+  * implemented GetResultBBox() (SVG1.2)
+  * added parameter coordinates (wxSVG_COORDINATES) to GetBBox()
+  * some other small changes and bug fixes
+
+
 Version 1.0b4 <2005.12.04>
 --------------------------
 
