--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
 TODO
+  * SVGUseElement -> fix GetBBox, GetResultBBox if no width/height specified
+  * SVGLocatable::GetChildrenBBox -> don't use defs-tag by calculation
+  * Render: don't delete shadow tree aftre drawing of SVGUseElement
   * rewrite parse_dtd.py using xmlto library to parse svg11.dtd
   * implement animated style attributes
   * fix SVGAnimatedPathData and SVGAnimatedPoints
   * libart backend: optimize DrawCanvasImage -> too slow
-  * Render: don't delete shadow tree aftre drawing of SVGUseElement
+
