--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.0b6 <2006.03.15>
+--------------------------
+
+  * some bug fixes
+
 Version 1.0b5 <2006.01.23>
 --------------------------
 
@@ -6,7 +11,6 @@ Version 1.0b5 <2006.01.23>
   * added parameter coordinates (wxSVG_COORDINATES) to GetBBox()
   * initial release of svgui
   * some other small changes and bug fixes
-
 
 Version 1.0b4 <2005.12.04>
 --------------------------
