--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.0b9 <2008.02.25>
+--------------------------
+
+  * some small changes
+
 Version 1.0b8 <2008.01.02>
 --------------------------
 
