--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.0b10 <2008.03.02>
+--------------------------
+
+  * fixed frame accurate displaying of image from video file
+
 Version 1.0b9 <2008.02.25>
 --------------------------
 
