--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.0b11 <2008.07.15>
+--------------------------
+
+  * extended media decoder to get stream information
+
 Version 1.0b10 <2008.03.05>
 --------------------------
 
