--- a/ChangeLog
+++ b/ChangeLog
@@ -1,64 +1,15 @@
-Version 1.0b11 <2008.07.15>
---------------------------
-
-  * extended media decoder to get stream information
-
-Version 1.0b10 <2008.03.05>
---------------------------
-
-  * fixed frame accurate displaying of image from video file
-
-Version 1.0b9 <2008.02.25>
---------------------------
-
-  * some small changes
-
-Version 1.0b8 <2008.01.02>
+Version 1.0 <2008.11.11>
 --------------------------
 
   * added ffmpeg media decoder
   * added support of agg 2.5
-  * some other changes
-
-Version 1.0b7 <2006.10.12>
---------------------------
-
   * implemented baseline
   * fixed text-anchor
-
-Version 1.0b6 <2006.03.15>
---------------------------
-
-  * some bug fixes
-
-Version 1.0b5 <2006.01.23>
---------------------------
-
   * added support of svg gradients
   * implemented GetResultBBox() (SVG1.2)
   * added parameter coordinates (wxSVG_COORDINATES) to GetBBox()
-  * initial release of svgui
-  * some other small changes and bug fixes
-
-Version 1.0b4 <2005.12.04>
---------------------------
-
   * fixed text rendering under some platforms
-
-Version 1.0b3 <2005.12.01>
---------------------------
-
-  * fixed some bugs
-
-Version 1.0b2 <2005.11.08>
---------------------------
-
   * implemented saving
-  * some other small changes
-
-Version 1.0b1 <2005.10.18>
---------------------------
-
   * added GetOwnerDocument()
   * added GetAttribute()
   * fixed CloneNode() and copy constructors
@@ -66,6 +17,7 @@ Version 1.0b1 <2005.10.18>
   * added rect parameter to wxSVGDocument::Render()
   * wxSVGCtrl: fixed refresh (redraw buffer only in OnPaint)
   * added cairo backend (disabled by default)
+  * some other small changes and bug fixes
 
 Version 0.9 <2005.07.31>
 ------------------------
