--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.0.1 <2009.11.22>
+--------------------------
+
+  * fixed ffmpeg media decoder
+  * updated for new version of ffmpeg (SVN-r20373)
+  
 Version 1.0 <2008.11.11>
 --------------------------
 
