--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 ---------------------------------------
 Author and Maintainer of wxSVG library:
 ---------------------------------------
-  Alex Thuering <alex.thuering@web.de>
+  Alex Thuering <alex AT thuering.biz>
