--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.0.2 <2009.12.10>
+--------------------------
+
+  * fixed loading of path element
+
 Version 1.0.1 <2009.11.22>
 --------------------------
 
