--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.0.3 <2010.03.07>
+--------------------------
+
+  * fixed handling of image alpha channel
+
 Version 1.0.2 <2009.12.10>
 --------------------------
 
