--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.0.6 <2010.08.29>
+--------------------------
+  
+  * fixed rendering of video frame
+
 Version 1.0.5 <2010.07.22>
 --------------------------
   
