--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.0.7 <2010.10.10>
+--------------------------
+  
+  * added some methods to media decoder
+
 Version 1.0.6 <2010.08.29>
 --------------------------
   
