--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.0.10 <2011.06.13>
+--------------------------
+  
+  * fixed wxSVGCanvasImage::Init()
+
 Version 1.0.9 <2011.06.05>
 --------------------------
   
