--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.1.1 <2011.08.04>
+--------------------------
+  
+  * fixed text rendering
+  * fixed rendering of video
+
 Version 1.1.0 <2011.07.24>
 --------------------------
   
