--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.1.2 <2011.08.14>
+--------------------------
+  
+  * added handling of preserveAspectRatio attribute
+
 Version 1.1.1 <2011.08.04>
 --------------------------
   
