--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.1.3 <2011.11.14>
+--------------------------
+
+  * SVGImageElement: added support of SVG images
+  * added support of Gaussian blur filter
+
 Version 1.1.2 <2011.08.14>
 --------------------------
   
