--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.1.4 <2011.11.22>
+--------------------------
+
+  * added SVG image handler
+
 Version 1.1.3 <2011.11.14>
 --------------------------
 
