--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.1.5 <2011.11.24>
+--------------------------
+
+  * wxSVGTextContentElement: added handling of xml:space attribute
+  * wxSVGVideoElement: added handling of attributes begin, dur, clipBegin and clipEnd
+
 Version 1.1.4 <2011.11.22>
 --------------------------
 
