--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Version 1.1.6 <2012.01.13>
+--------------------------
+  
+  * added support of clipPath element
+  * added support of visibility style property
+  * fixed handling of aspect ratio of video
+
 Version 1.1.5 <2011.11.24>
 --------------------------
 
