--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.1.9 <2012.06.25>
+--------------------------
+
+  * added support of libav 0.9 / ffmpeg 0.11
+
 Version 1.1.8 <2012.04.12>
 --------------------------
 
