--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-Version 1.1.10 <2012.01.12>
+Version 1.1.11 <2013.01.17>
+---------------------------
+
+  * fixed text rendering using PangaCairo
+
+Version 1.1.10 <2013.01.12>
 ---------------------------
 
   * wxFfmpegMediaDecoder: fixed GetPosition()
