--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.1.12 <2013.01.19>
+---------------------------
+
+  * fixed text rendering using PangaCairo
+
 Version 1.1.11 <2013.01.17>
 ---------------------------
 
