--- a/ChangeLog
+++ b/ChangeLog
@@ -1,134 +1,139 @@
-Version 1.1.12 <2013.01.19>
+Version 1.1.13 <2013-02-13>
+---------------------------
+
+  * fixed handling of clipPath element
+
+Version 1.1.12 <2013-01-19>
 ---------------------------
 
   * fixed text rendering using PangaCairo
 
-Version 1.1.11 <2013.01.17>
+Version 1.1.11 <2013-01-17>
 ---------------------------
 
   * fixed text rendering using PangaCairo
 
-Version 1.1.10 <2013.01.12>
+Version 1.1.10 <2013-01-12>
 ---------------------------
 
   * wxFfmpegMediaDecoder: fixed GetPosition()
   * MacOSX: added support of quartz fonts
 
-Version 1.1.9 <2012.06.25>
+Version 1.1.9 <2012-06-25>
 --------------------------
 
   * added support of libav 0.9 / ffmpeg 0.11
 
-Version 1.1.8 <2012.04.12>
+Version 1.1.8 <2012-04-12>
 --------------------------
 
   * fixed memory leak
   * fixed storing of xml file
 
-Version 1.1.7 <2012.04.01>
+Version 1.1.7 <2012-04-01>
 --------------------------
 
   * wxFfmpegMediaDecoder: fixed GetDuration()
   * fixed rendering of radial gradients (thanks to frustum)
   * added support of libav
 
-Version 1.1.6 <2012.01.13>
+Version 1.1.6 <2012-01-13>
 --------------------------
   
   * added support of clipPath element
   * added support of visibility style property
   * fixed handling of aspect ratio of video
 
-Version 1.1.5 <2011.11.24>
+Version 1.1.5 <2011-11-24>
 --------------------------
 
   * wxSVGTextContentElement: added handling of xml:space attribute
   * wxSVGVideoElement: added handling of attributes begin, dur, clipBegin and clipEnd
 
-Version 1.1.4 <2011.11.22>
+Version 1.1.4 <2011-11-22>
 --------------------------
 
   * added SVG image handler
 
-Version 1.1.3 <2011.11.14>
+Version 1.1.3 <2011-11-14>
 --------------------------
 
   * SVGImageElement: added support of SVG images
   * added support of Gaussian blur filter
 
-Version 1.1.2 <2011.08.14>
+Version 1.1.2 <2011-08-14>
 --------------------------
   
   * added handling of preserveAspectRatio attribute
 
-Version 1.1.1 <2011.08.04>
+Version 1.1.1 <2011-08-04>
 --------------------------
   
   * fixed text rendering
   * fixed rendering of video
 
-Version 1.1.0 <2011.07.24>
+Version 1.1.0 <2011-07-24>
 --------------------------
   
   * updated cairo backend - it's default backend now
   * added rendering with alpha
   * added wxSVGTBreakElement
 
-Version 1.0.10 <2011.06.13>
+Version 1.0.10 <2011-06-13>
 --------------------------
   
   * fixed wxSVGCanvasImage::Init()
 
-Version 1.0.9 <2011.06.05>
+Version 1.0.9 <2011-06-05>
 --------------------------
   
   * fixed wxSVGCanvasImage::GetDefaultHeight()
 
-Version 1.0.8 <2011.02.23>
+Version 1.0.8 <2011-02-23>
 --------------------------
   
   * fixed wxFfmpegMediaDecoder::GetFrameAspectRatio()
 
-Version 1.0.7 <2010.10.10>
+Version 1.0.7 <2010-10-10>
 --------------------------
   
   * added some methods to media decoder
 
-Version 1.0.6 <2010.08.29>
+Version 1.0.6 <2010-08-29>
 --------------------------
   
   * fixed rendering of video frame
 
-Version 1.0.5 <2010.07.22>
+Version 1.0.5 <2010-07-22>
 --------------------------
   
   * added possibility to render without preserving aspect ratio 
   * fixed bug in wxSVGCanvasTextFreetype
 
-Version 1.0.4 <2010.03.28>
+Version 1.0.4 <2010-03-28>
 --------------------------
   
   * fixed memory leak (thanks to Lucian Ion)
 
-Version 1.0.3 <2010.03.07>
+Version 1.0.3 <2010-03-07>
 --------------------------
 
   * fixed handling of image alpha channel
   * changed to use system expat library
 
-Version 1.0.2 <2009.12.10>
+Version 1.0.2 <2009-12-10>
 --------------------------
 
   * fixed read of path element
 
-Version 1.0.1 <2009.11.22>
+Version 1.0.1 <2009-11-22>
 --------------------------
 
   * fixed ffmpeg media decoder
   * updated for new version of ffmpeg (SVN-r20373)
   * removed SVGUI classes
   
-Version 1.0 <2008.11.11>
+Version 1.0 <2008-11-11>
 --------------------------
 
   * added ffmpeg media decoder
@@ -149,7 +154,7 @@ Version 1.0 <2008.11.11>
   * added cairo backend (disabled by default)
   * some other small changes and bug fixes
 
-Version 0.9 <2005.07.31>
+Version 0.9 <2005-07-31>
 ------------------------
 
   * implemented image element
@@ -159,13 +164,13 @@ Version 0.9 <2005.07.31>
   * removed all GetAnimated/SetAnimated methods
   * wxSVGLength: added calculation of percantage values
 
-Version 0.8 <2005.05.27>
+Version 0.8 <2005-05-27>
 ------------------------
 
   * implemented text element
   * added agg backend (enabled in windows version)
 
-Version 0.7 <2005.05.23>
+Version 0.7 <2005-05-23>
 ------------------------
 
   * initial release
