--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.1.15 <2013-05-01>
+---------------------------
+
+  * fixed text rendering using PangaCairo
+
 Version 1.1.14 <2013-04-06>
 ---------------------------
 
