--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+CVS
+---
+
+  * added initial support of animations
+  * added support of mask for image element
+
 Version 1.1.16 <2013-08-25>
 ---------------------------
 
