--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
-CVS
----
+Version 1.2 <2013-09-17>
+------------------------
 
   * added initial support of animations
   * added support of mask for image element
