--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.3 <2014-04-13>
+--------------------------
+
+  * added support of animations
+  * fixed some GetBBox() methods
+
 Version 1.2.1 <2013-10-16>
 --------------------------
 
