--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
+Version 1.4 <2014-05-24>
+------------------------
+
+  * added support of pattern element
+
 Version 1.3 <2014-04-13>
---------------------------
+------------------------
 
   * added support of animations
   * fixed some GetBBox() methods
