--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.5 <2014-08-09>
+------------------------
+
+  * added support of marker element
+  * added support of patternTransform attribute
+
 Version 1.4.2 <2014-07-06>
 --------------------------
 
