--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.5.1 <2014-11-23>
+--------------------------
+
+  * fixed some compiler errors
+
 Version 1.5 <2014-08-09>
 ------------------------
 
