--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.5.2 <2014-12-14>
+--------------------------
+  
+  * fixed memory leak (thanks to Sebastian Vater)
+
 Version 1.5.1 <2014-11-23>
 --------------------------
 
