--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.5.4 <2015-03-21>
+--------------------------
+
+  * added support of 3-digit hex color codes (thanks to Constantine)
+
 Version 1.5.3 <2015-01-18>
 --------------------------
 
