--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.5.6 <2016-03-11>
+--------------------------
+
+  * fixed SVGAnimationElement
+
 Version 1.5.5 <2015-10-03>
 --------------------------
 
