--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.5.7 <2016-05-03>
+--------------------------
+
+  * wxFfmpegMediaDecoder: added GetChapters() and GetMetadata()
+  * fixed SVGAnimationElement
+  
 Version 1.5.6 <2016-03-11>
 --------------------------
 
