--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.5.8 <2016-06-05>
+--------------------------
+
+  * fixed ApplyAnimation
+
 Version 1.5.7 <2016-05-03>
 --------------------------
 
