--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.5.9 <2016-08-09>
+--------------------------
+
+  * changed GetBBox() and GetResultBBox()
+  * added some missing header files
+
 Version 1.5.8 <2016-06-05>
 --------------------------
 
