--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.5.10 <2016-10-23>
+--------------------------
+
+  * added support of EXIF metadata
+
 Version 1.5.9 <2016-08-09>
 --------------------------
 
