--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.5.11 <2016-12-28>
+--------------------------
+
+  * wxSVGImage: fixed displying of first video frame
+
 Version 1.5.10 <2016-10-23>
 --------------------------
 
