--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 Version 1.5.11 <2016-12-28>
 --------------------------
 
-  * wxSVGImage: fixed displying of first video frame
+  * wxSVGImage: fixed displaying of first video frame
 
 Version 1.5.10 <2016-10-23>
 --------------------------
